--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native-mocks/file": "^2.0.12",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.14.0",
     "@ionic-native/splash-screen": "^5.0.0",
